--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h2>Video dari Google Drive</h2>
+    <h2>Kalo gak bituh uang untuk bayar hutang <br>pasti saya garap besok pagi bang 🥱</h2>
     <div class="video-container">
         <iframe id="videoPlayer" src="https://drive.google.com/file/d/1t_YqGB88fYLJl04qgsYsBSV3Ysf7SLjz/preview" allowfullscreen></iframe>
     </div>
