--- a/index.html
+++ b/index.html
@@ -19,25 +19,23 @@
             padding: 20px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
+            position: relative;
+            overflow: hidden;
+            aspect-ratio: 16 / 9;
         }
         iframe {
             width: 100%;
-            height: 450px;
+            height: 100%;
             border: none;
             border-radius: 10px;
+            display: block;
         }
     </style>
 </head>
 <body>
     <h2>Video dari Google Drive</h2>
     <div class="video-container">
-        <iframe id="videoPlayer" allowfullscreen loading="lazy" referrerpolicy="no-referrer" allow="autoplay; encrypted-media" sandbox="allow-scripts allow-same-origin"></iframe>
+        <iframe id="videoPlayer" allowfullscreen playsinline allow="autoplay; encrypted-media" referrerpolicy="no-referrer" sandbox="allow-scripts allow-same-origin" src="https://drive.google.com/file/d/1t_YqGB88fYLJl04qgsYsBSV3Ysf7SLjz/preview"></iframe>
     </div>
-    
-    <script>
-        window.onload = function() {
-            document.getElementById("videoPlayer").src = "https://drive.google.com/file/d/1t_YqGB88fYLJl04qgsYsBSV3Ysf7SLjz/preview";
-        };
-    </script>
 </body>
 </html>
